fix: Allow scrolling on overflow

--- a/app/components/main/_index.scss
+++ b/app/components/main/_index.scss
@@ -11,6 +11,7 @@ $btn-color-hover: rgba(163, 151, 252, 1);
   align-items: center;
   justify-content: center;
   align-items: center;
+  overflow: auto;
 }
 
 .main-about {
