--- a/app/containers/main/_index.scss
+++ b/app/containers/main/_index.scss
@@ -1,5 +1,5 @@
 .main-container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
@@ -11,4 +11,7 @@
     -o-linear-gradient(#9F20B1, #4B0C5E);
   background-image:
     linear-gradient(#9F20B1, #4B0C5E);
+    overflow: auto;
+    min-height: -webkit-min-content;
+    display: flex;
 }
